--- a/Views/Home/HeroPage.cshtml
+++ b/Views/Home/HeroPage.cshtml
@@ -1,5 +1,17 @@
-@model DotaApi.Models.NewHeroDisplay
+@model DotaAPI.Models.NewHeroDisplay
 @{
     ViewData["Title"] = Model.name;
 }
-<p>works</p>
+<h2>@Model.name</h2>
+<p>Base Hero: @Model.base_hero</p>
+@if(Model.bio != null)
+{
+    <h3>Bio</h3>
+    <p>@Model.bio</p>
+}
+<h3>Spells</h3>
+@foreach(var x in Model.spells)
+{
+    <p>@x.name</p>
+}
+<p><a href="list">Back</a></p>
