--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
         <hr />
         <footer>
             <p>&copy; 2018 - Dota Hero Creator</p>
+            <span style="font-size: 8pt">Last updated for version 7.10</span>
         </footer>
     </div>
 
