added new spell page to admin

--- a/Views/Admin/AddHero.cshtml
+++ b/Views/Admin/AddHero.cshtml
@@ -21,5 +21,6 @@
         <option value='Ranged'>Ranged</option>
     </select><br><br>
     <p>attack_range</p> <input asp-for='attack_range'><br><br>
+    <p>image</p> <input asp-for='img'><br><br>
     <input type='submit'>
 </form>
