--- a/Views/Admin/Main.cshtml
+++ b/Views/Admin/Main.cshtml
@@ -8,7 +8,7 @@
 <p>Update</p>
 <p>Delete</p>
 <h3>Spells</h3>
-<p>Add</p>
+<p><a href='addspell'>Add</a></p>
 <p>Update</p>
 <p>Delete</p>
 <h3>Items</h3>
