added images to hero/spell pages

--- a/Views/Home/HeroPage.cshtml
+++ b/Views/Home/HeroPage.cshtml
@@ -25,6 +25,6 @@ else
 <h3>Spells</h3>
 @foreach(var x in Model.spells)
 {
-    <p><a href="/base/spell/@x.id">@x.name</a></p>
+    <p><img src=@x.img width=30> <a href="/base/spell/@x.id">@x.name</a></p> 
 }
 <p><a href="list">Back</a></p>
