updated rating system and list

--- a/Views/Admin/Main.cshtml
+++ b/Views/Admin/Main.cshtml
@@ -5,13 +5,9 @@
 <h2>Admin</h2>
 <h3>Heroes</h3>
 <p><a href='addhero'>Add</a></p>
-<p>Update</p>
+<p><a href='updatehero'>Update</a></p>
 <p>Delete</p>
 <h3>Spells</h3>
 <p><a href='addspell'>Add</a></p>
-<p>Update</p>
-<p>Delete</p>
-<h3>Items</h3>
-<p>Add</p>
 <p>Update</p>
 <p>Delete</p>
