--- a/Views/Home/HeroPage.cshtml
+++ b/Views/Home/HeroPage.cshtml
@@ -43,7 +43,7 @@ else
     {
         vote += 's';
     }
-    <p>@ViewBag.rating (@ViewBag.voteCount @vote)</p>
+    <p>@ViewBag.rating% (@ViewBag.voteCount @vote)</p>
 }
 @if(ViewBag.loggedUser == null)
 {
@@ -78,4 +78,4 @@ else
     int prev = Model.id - 1;
     <p><a href="@prev">← Previous Hero</a></p>
 }
-<p><a href="list">Back</a></p>
+<p><a href="/heroes">Back</a></p>
