--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,8 +7,16 @@
 }
 else
 {
-    <h3>Welcome to the Dota 2 hero creator, @ViewBag.name!</h3>
+    <h3>Welcome, @ViewBag.name!</h3>
 }
-<p><a href="create">Create a hero</a></p>
-<p><a href="list">View heroes</a></p>
+<p>The Dota 2 Hero Creator is based on the Ability Draft mode in Dota 2. Starting with an existing hero as the base, mix and match other heroes' spells to create a new hero.</p>
+<p><a href="create">Create a hero</a> now, or <a href="heroes">view other users' heroes.</a></p>
 <p>You can also use the API! <a href="http://localhost:5000/api/hero/1">http://localhost:5000/api/hero/(number)</a> for heroes, <a href="http://localhost:5000/api/spell/1">http://localhost:5000/api/spell/(number)</a> for spells</p>
+@if(ViewBag.name == null)
+{
+    <p><a href='login'>Log in</a> or <a href='register'>create an account</a> to keep track of your created heroes and vote on other heroes!</p>
+}
+else
+{
+    <p><a href='logout'>Log out</a></p>
+}
