added admin CRUD

--- a/Views/Admin/Main.cshtml
+++ b/Views/Admin/Main.cshtml
@@ -6,8 +6,8 @@
 <h3>Heroes</h3>
 <p><a href='addhero'>Add</a></p>
 <p><a href='updatehero'>Update</a></p>
-<p>Delete</p>
+<p><a href='delete/hero'>Delete</a></p>
 <h3>Spells</h3>
 <p><a href='addspell'>Add</a></p>
-<p>Update</p>
-<p>Delete</p>
+<p><a href='updatespell'>Update</a></p>
+<p><a href='delete/spell'>Delete</a></p>
