added admin delete hero

--- a/Views/Admin/AddHero.cshtml
+++ b/Views/Admin/AddHero.cshtml
@@ -22,5 +22,6 @@
     </select><br><br>
     <p>attack_range</p> <input asp-for='attack_range'><br><br>
     <p>image</p> <input asp-for='img'><br><br>
-    <input type='submit'>
+    <input type='submit'><br><br>
 </form>
+<p><a href="/admin/main">Back</a></p>
