--- a/Views/Admin/AddSpell.cshtml
+++ b/Views/Admin/AddSpell.cshtml
@@ -12,5 +12,6 @@
         <option value='1'>yes</option>
     </select><br><br>
     <p>img</p> <input asp-for="img"><br><br>
-    <input type='submit'>
+    <input type='submit'><br><br>
 </form>
+<p><a href="/admin/main">Back</a></p>
