--- a/Views/Admin/Main.cshtml
+++ b/Views/Admin/Main.cshtml
@@ -11,3 +11,7 @@
 <p><a href='addspell'>Add</a></p>
 <p><a href='updatespell'>Update</a></p>
 <p><a href='delete/spell'>Delete</a></p>
+<h3>New Heroes</h3>
+<p><a href="deletenew">Delete</a></p>
+<hr>
+<p><a href="/logout">Logout</a></p>
