--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -2,6 +2,5 @@
     ViewData["Title"] = "About";
 }
 <h3>@ViewData["Title"]</h3>
-<h3>@ViewData["Message"]</h3>
-
-<p>Use this area to provide additional information.</p>
+<p>DotaCreator is based on the Ability Draft mode in Dota 2. Starting with an existing hero as the base, mix and match other heroes' spells to create a new hero.</p>
+<p>You can also use the API! <a href="http://dotacreator.com/api/hero/1">http://dotacreator.com/api/hero/(number)</a> for heroes, <a href="http://dotacreator.com/api/spell/1">http://dotacreator.com/api/spell/(number)</a> for spells.</p>
