--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Dota Hero Creator</title>
+    <title>@ViewData["Title"] - DotaCreator</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Dota Hero Creator</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DotaCreator</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Dota Hero Creator</p>
+            <p>&copy; 2018 - DotaCreator</p>
             <span style="font-size: 8pt">Last updated for version 7.10</span>
         </footer>
     </div>
