--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Login</h2>
 <form asp-controller="Admin" asp-action="Login" method='post'>
-    Username: <input type="text" name='username'></br><br>
-    Password: <input type='password' name='password'><br><br>
+    Username: <input class='form-control' type="text" name='username'></br><br>
+    Password: <input class='form-control' type='password' name='password'><br><br>
     <input type='submit' value='Login'>
 </form>
