--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -34,3 +34,43 @@
         display: none;
     }
 }
+
+h2, h3, h4, p, span, form
+{
+    color: rgb(150,150,150);
+}
+
+input, select
+{
+    color: black;
+}
+
+a
+{
+    color: rgb(180,180,200);
+    /* font-weight: bold;  */
+}
+
+.voteButton
+{
+    display: inline-block;
+    margin-bottom: 5pt;
+}
+
+.navbar
+{
+    background-color: rgb(23,24,25);
+}
+
+
+.form-control
+{
+    width: 180px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+b
+{
+    color: white;
+}
