--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -8,3 +8,4 @@
     Password <br><input class='form-control' asp-for="password"> <span asp-validation-for="password"></span><br><br>
     <input type='submit'>
 </form>
+<br><p>Need an account? <a href="/register">Register here!</a></p>
