--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -9,3 +9,4 @@
     Confirm Password <br><input class='form-control' asp-for="pwconfirm"> <span asp-validation-for="pwconfirm"></span><br><br>
     <input type="submit">
 </form>
+<br><p>Already have an account? <a href="/login">Log in here!</a></p>
